fix(uniselect): set overflow-y to auto to avoid showing scrollbar when its not needed
ref: #908

--- a/src/styles/components/uniSelect/__uniSelect.sass
+++ b/src/styles/components/uniSelect/__uniSelect.sass
@@ -15,4 +15,4 @@
     margin-top: 0
     min-width: pxToRem(150)
     max-height: 20rem
-    overflow-y: scroll
+    overflow-y: auto
